# djangologist

./: README.md  pyproject.toml
.github/workflows/: linting.yml  testing.yml
djangologist/: morphers.py  services.py  types.py
djangology/: exceptions.py  morphers.py  selectors.py  services.py
tests/: conftest.py  factories.py  settings.py  test_morphers.py  test_selectors.py  test_services.py
tests/dummy_app/: logic.py  models.py
